@@ -1,5 +1,9 @@
 2011-03-08  Philippe Brochard  <pbrochard@common-lisp.net>
 
+	* src/clfswm-internal.lisp (show-all-children): Hide windows not
+	in the current root before displaying those in current root.
+	Remove all hide-all unnecessary calls.
+
 	* src/clfswm-configuration.lisp (save-variables-in-conf-file):
 	Save only variables with a different value than there original
 	value.
